<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) Aeontronix 2019
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.aeontronix.maven</groupId>
        <artifactId>aeontronix-oss-parent-pom</artifactId>
        <version>1.0.4</version>
    </parent>

    <groupId>com.aeontronix.enhanced-mule</groupId>
    <artifactId>enhanced-mule-tools</artifactId>
    <name>Enhanced Mule Tools</name>
    <description>Automation tools for mulesoft's anypoint platform</description>
    <url>https://aeontronix.gitlab.io/oss/enhanced-mule-tools/</url>
    <packaging>pom</packaging>
    <version>1.1.9</version>

    <properties>
        <maven.compiler.release>8</maven.compiler.release>
    </properties>

    <organization>
        <name>Aeontronix Inc</name>
        <url>http://www.aeontronix.com</url>
    </organization>

    <developers>
        <developer>
            <name>Dev Team</name>
            <organization>Aeontronix</organization>
        </developer>
    </developers>

    <issueManagement>
        <system>Github</system>
        <url>https://gitlab.com/aeontronix/oss/enhanced-mule-tools/issues</url>
    </issueManagement>

    <scm>
        <url>scm:git:git@gitlab.com:aeontronix/oss/enhanced-mule-tools.git</url>
        <connection>scm:git:git@gitlab.com:aeontronix/oss/enhanced-mule-tools.git</connection>
        <developerConnection>scm:git:git@gitlab.com:aeontronix/oss/enhanced-mule-tools.git</developerConnection>
    </scm>

    <licenses>
        <license>
            <name>CPAL 1.0</name>
            <url>https://opensource.org/licenses/CPAL-1.0</url>
        </license>
    </licenses>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>2.10.1</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>lib</module>
        <module>cli</module>
        <module>maven-plugin</module>
    </modules>

    <distributionManagement>
        <site>
            <id>local</id>
            <url>file:public</url>
        </site>
    </distributionManagement>
</project>
